--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
                 <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
             </a>
             <button
@@ -50,7 +50,7 @@
             <div class="row">
                 <div
                     class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/036_ret-sw.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/036_ret-sw.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
                 <div class="col-sm-12 col-md-6 order-1 order-md-2">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 image justify-content-center">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/zu_dritt.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/zu_dritt.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
             </div>
@@ -136,7 +136,7 @@
             <div class="row">
                 <div
                     class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/149_ret-sw.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/149_ret-sw.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
                 <div class="col-sm-12 col-md-6 order-1 order-md-2">
