--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
                 <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
             </a>
             <button
@@ -39,7 +39,7 @@
     </nav>
 
     <main id="kristina" class="subpage">
-        <header class="subpage-header">
+        <header>
             <div class="container">
                 <h2>Vom Ungeplanten Glück</h2>
                 <h1><span class="fName">Kristina</span> <span class="lName">Hendel</span></h1>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-sm-12 col-lg-6 blob blob-right image d-lg-none d-flex">
                         <img id="sebastian-full" class="img-fluid animate"
-                            src="../assets/img/no-bg/002_ret-sw.png"
+                            src="../assets/img/no-bg/002_ret-sw.webp"
                             alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                     </div>
                     <div class="text animate left">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 blob blob-right image d-none d-lg-flex">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/002_ret-sw.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/002_ret-sw.webp"
                         alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/134_ret-sw.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/134_ret-sw.webp"
                         alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
                 </div>
                 <div class="col-sm-12 col-lg-6 order-0 order-lg-1">
@@ -208,7 +208,43 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="sponsors">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-4 col-xl">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/asics.svg" alt="Logo von Asics"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/stadtwerke.svg"
+                                alt="Logo der Stadtwerke Reichenbach" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/datec.svg" alt="Logo von Datec"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
