--- a/src/pages/legal-details.html
+++ b/src/pages/legal-details.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
                 <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
             </a>
             <button
