--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
                 <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
             </a>
             <button
@@ -79,7 +79,7 @@
                     <div
                         class="col-sm-12 col-lg-6 blob blob-right image justify-content-center d-lg-none d-flex">
                         <img id="sebastian-full" class="img-fluid animate"
-                            src="../assets/img/no-bg/017_ret-sw.png"
+                            src="../assets/img/no-bg/017_ret-sw.webp"
                             alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                     </div>
                     <div class="text animate left">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 blob blob-right image d-none d-lg-flex">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/017_ret-sw.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/017_ret-sw.webp"
                         alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                 </div>
             </div>
@@ -119,7 +119,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image">
-                    <img class="img-fluid animate" src="../assets/img/no-bg/128_ret-sw.png"
+                    <img class="img-fluid animate" src="../assets/img/no-bg/128_ret-sw.webp"
                         alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
                 </div>
                 <div class="col-sm-12 col-lg-6 order-0 order-lg-1">
@@ -202,7 +202,61 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="sponsors">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/adidas.svg" alt="Logo von Adidas"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/thermofin.svg" alt="Logo von Thermofin"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/img/sponsors/volksbank.webp"
+                                alt="Logo der Volksbank Vogtland-Saale-Orla" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/woba.svg" alt="Logo von WOBA"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/stadtwerke.svg"
+                                alt="Logo der Stadtwerke Reichenbach" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/datec.svg" alt="Logo von Datec"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <div class="image">
+                            <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
+                                class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
