--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -49,7 +49,7 @@
         <section class="container">
             <div class="row">
                 <div
-                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
+                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/036_ret-sw.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
@@ -125,7 +125,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 image justify-content-center">
+                <div class="col-sm-12 col-md-6 image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/zu_dritt.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
@@ -135,7 +135,7 @@
         <section class="container">
             <div class="row">
                 <div
-                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
+                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/149_ret-sw.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
