--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -118,7 +118,8 @@
 
         <section class="container">
             <div class="row">
-                <div class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image">
+                <div
+                    class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image justify-content-center justify-content-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/128_ret-sw.webp"
                         alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
                 </div>
