--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -78,7 +78,8 @@
                             Strecke kroatische Vizemeisterin gewesen.
                         </p>
                     </div>
-                    <div class="col-sm-12 col-lg-6 blob blob-right image d-lg-none d-flex">
+                    <div
+                        class="col-sm-12 col-lg-6 blob blob-right image d-lg-none d-flex justify-content-center">
                         <img id="sebastian-full" class="img-fluid animate"
                             src="../assets/img/no-bg/002_ret-sw.webp"
                             alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
@@ -122,7 +123,8 @@
 
         <section class="container">
             <div class="row">
-                <div class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image">
+                <div
+                    class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image justify-content-center justify-content-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/134_ret-sw.webp"
                         alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
                 </div>
