add links to sponsors

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <a class="scrollToTop btn btn-lg btn-dark" href="#">
+        <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
+    </a>
+
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -33,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sebastian.html">Sebastian</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Kontakt</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -49,11 +57,11 @@
         <section class="container">
             <div class="row">
                 <div
-                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-lg-start">
+                    class="col-sm-12 col-lg-6 order-2 order-lg-1 blob blob-left image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/036_ret-sw.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
-                <div class="col-sm-12 col-md-6 order-1 order-md-2">
+                <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                     <div class="text animate right">
                         <h2>In New York fängt alles an</h2>
                         <p>
@@ -94,7 +102,7 @@
 
         <section class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-lg-6">
                     <div class="text animate right">
                         <h2>Neues Leben zu dritt</h2>
                         <p>
@@ -125,7 +133,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 image justify-content-center justify-lg-start">
+                <div class="col-sm-12 col-lg-6 image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/zu_dritt.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
@@ -135,11 +143,11 @@
         <section class="container">
             <div class="row">
                 <div
-                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-lg-start">
+                    class="col-sm-12 col-lg-6 order-2 order-lg-1 blob blob-left image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/149_ret-sw.webp"
                         alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
                 </div>
-                <div class="col-sm-12 col-md-6 order-1 order-md-2">
+                <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                     <div class="text animate right">
                         <h2>Auf zu neuen Zielen</h2>
                         <p>
