--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+  <a class="scrollToTop btn btn-lg btn-dark" href="#">
+    <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
+  </a>
+
   <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -33,12 +38,18 @@
           <li class="nav-item">
             <a class="nav-link" href="sebastian.html">Sebastian</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Kontakt</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
+
+
   <main id="index">
+
     <header>
       <div class="container">
         <h2>Vom Ungeplanten Glück</h2>
@@ -51,11 +62,11 @@
     <section class="container">
       <div class="row">
         <div
-          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
+          class="col-sm-12 col-lg-6 order-2 order-lg-1 blob blob-left image justify-content-center">
           <img class="img-fluid animate" src="../assets/img/no-bg/114_ret-sw.webp"
             alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
         </div>
-        <div class="col-sm-12 col-md-6 order-1 order-md-2">
+        <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
           <div class="text animate right">
             <h1>Gemeinsam nach Paris</h1>
             <p>
@@ -87,7 +98,7 @@
 
     <section id="kristina-index" class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-lg-6">
           <div class="text animate left">
             <h2>Kristina Hendel</h2>
             <p>
@@ -102,7 +113,7 @@
             <a href="kristina.html" class="btn btn-lg">Mehr Erfahren</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 blob blob-right image justify-content-center">
+        <div class="col-sm-12 col-lg-6 blob blob-right image justify-content-center">
           <img class="img-fluid animate" src="../assets/img/no-bg/011_ret-sw.webp"
             alt="Kristina Hendel im Trainingsanzug, Ganzkörperaufnahme">
         </div>
@@ -112,11 +123,11 @@
     <section id="sebastian-index" class="container">
       <div class="row">
         <div
-          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-center">
+          class="col-sm-12 col-lg-6 order-2 order-lg-1 blob blob-left image justify-content-center justify-content-md-center">
           <img class="img-fluid animate" src="../assets/img/no-bg/017_ret-sw.webp"
             alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
         </div>
-        <div class="col-sm-12 order-1 order-md-2 col-md-6">
+        <div class="col-sm-12 order-1 order-lg-2 col-lg-6">
           <div class="text animate right">
             <h2>Sebastian Hendel</h2>
             <p>
@@ -138,27 +149,27 @@
       <div class="container">
         <div class="row">
           <div class="col-6 col-lg-3">
-            <div class="image">
-              <img src="../assets/svg/sponsors/stadtwerke.svg" alt="Logo der Stadtwerke Reichenbach"
-                class="img-fluid">
-            </div>
+            <a href="https://www.swrc.de/" target="_blank" class="image">
+              <img src="../assets/img/sponsors/stadtwerke.webp"
+                alt="Logo der Stadtwerke Reichenbach" class="img-fluid">
+            </a>
           </div>
           <div class="col-6 col-lg-3">
-            <div class="image">
+            <a href="https://datec-gmbh.de/" target="_blank" class="image">
               <img src="../assets/svg/sponsors/datec.svg" alt="Logo von Datec" class="img-fluid">
-            </div>
+            </a>
           </div>
           <div class="col-6 col-lg-3">
-            <div class="image">
+            <a href="https://sponser.de/" target="_blank" class="image">
               <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
                 class="img-fluid">
-            </div>
+            </a>
           </div>
           <div class="col-6 col-lg-3">
-            <div class="image">
+            <a href="https://www.mietens.com/" target="_blank" class="image">
               <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
                 class="img-fluid">
-            </div>
+            </a>
           </div>
         </div>
       </div>
