--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <a class="scrollToTop btn btn-lg btn-dark" href="#">
+        <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
+    </a>
+
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -33,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sebastian.html">Sebastian</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Kontakt</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -52,7 +60,7 @@
                     <div class="text animate left">
                         <h2>Anfänge</h2>
                         <p>
-                            Kristina Bozic – so ihr Mädchenname – ist in der kroatischen Hauptstadt
+                            Kristina Božić – so ihr Mädchenname – ist in der kroatischen Hauptstadt
                             Zagreb aufgewachsen. Der
                             Sport spielte von Kindesbeinen an eine wichtige Rolle in ihrem Leben.
                             Allerdings fand sie erst über
@@ -216,34 +224,34 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 col-xl">
-                        <div class="image">
+                        <a href="https://www.asics.com/de/de-de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/asics.svg" alt="Logo von Asics"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl">
-                        <div class="image">
-                            <img src="../assets/svg/sponsors/stadtwerke.svg"
+                        <a href="https://www.swrc.de/" target="_blank" class="image">
+                            <img src="../assets/img/sponsors/stadtwerke.webp"
                                 alt="Logo der Stadtwerke Reichenbach" class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl">
-                        <div class="image">
+                        <a href="https://datec-gmbh.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/datec.svg" alt="Logo von Datec"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl">
-                        <div class="image">
+                        <a href="https://sponser.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl">
-                        <div class="image">
+                        <a href="https://www.mietens.com/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
