--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <a class="scrollToTop btn btn-lg btn-dark" href="#">
+        <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
+    </a>
+
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -32,6 +37,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sebastian.html">Sebastian</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
