--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <a class="scrollToTop btn btn-lg btn-dark" href="#">
+        <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
+    </a>
+
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -32,6 +37,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sebastian.html">Sebastian</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -209,52 +217,53 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://www.adidas.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/adidas.svg" alt="Logo von Adidas"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://www.thermofin.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/thermofin.svg" alt="Logo von Thermofin"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://www.vb-vso.de/privatkunden.html" target="_blank"
+                            class="image">
                             <img src="../assets/img/sponsors/volksbank.webp"
                                 alt="Logo der Volksbank Vogtland-Saale-Orla" class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://www.woba-reichenbach.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/woba.svg" alt="Logo von WOBA"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
-                            <img src="../assets/svg/sponsors/stadtwerke.svg"
+                        <a href="https://www.swrc.de/" target="_blank" class="image">
+                            <img src="../assets/img/sponsors/stadtwerke.webp"
                                 alt="Logo der Stadtwerke Reichenbach" class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://datec-gmbh.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/datec.svg" alt="Logo von Datec"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://sponser.de/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="image">
+                        <a href="https://www.mietens.com/" target="_blank" class="image">
                             <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
                                 class="img-fluid">
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
