--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6">
-                <form action="https://formspree.io/f/xjvdlndy" method="POST"
+                <form action="https://formspree.io/f/mayzzbvg" method="POST"
                     class="row g-2 mt-lg-0">
                     <div class="col-12"><input required type="email" name="email"
                             class="form-control text-bg-white border-dark"
